--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "react-router": "^7.6.2"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.6.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@tauri-apps/cli": "^2"
+    "vite": "^6.0.3"
   }
 }
