--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,13 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1.0", features = ["full", "process"] }
+regex = "1.5"
+url = "2.4"
+futures = "0.3"
+anyhow = "1.0"
+colored = "2.0"
+dirs = "5.0"
+trust-dns-resolver = "0.23"
 
