--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.6.2"
+    "react-router": "^7.6.2",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.6.2",
