--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tauri"
+name = "bargozin"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Bargozin"
+authors = ["vesal_j"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -32,4 +32,3 @@ colored = "2.0"
 dirs = "5.0"
 trust-dns-resolver = "0.23"
 lazy_static = "1.4"
-
