--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,11 +22,12 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
 tokio = { version = "1.0", features = ["full", "process"] }
 regex = "1.5"
 url = "2.4"
 futures = "0.3"
+futures-util = "0.3"
 anyhow = "1.0"
 colored = "2.0"
 dirs = "5.0"
