--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build:windows": "tauri build --target x86_64-pc-windows-gnu"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
